fix bug with projects not displaying, add styling and spacing to some tabs

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   width: 100%;
   margin-bottom: 25px;
   background-image: url("./assets/images/abstractspacepicture.jpg");
-  background-size: cover;
+  background-size: 100%;
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
