--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -9,8 +9,8 @@
 .profile-pic {
     width: 200px;
     height: 200px;
-    margin-left: 20px;
     border-radius: 50%;
+    margin-top: 10px;
 }
 article {
     margin-top: 20px;
@@ -20,6 +20,9 @@ p {
     font-size: 25px;
 }
 .text-description {
-    padding: 20px;
-    margin: 10px;
+    /* text-align: center; */
+    margin:20px;
+}
+.profile {
+    margin-left: 50px;
 }
